# faboRobotBehavior

./: .gitignore  README.md  build.sh  pub.py  test_orders.sh  蓝牙连接操作
src/BehaviorModule/: CMakeLists.txt  package.xml
src/BehaviorModule/data/: behaviourData.json
src/BehaviorModule/include/: BehaviorManager.h  SubBehaviorExpression.h
src/BehaviorModule/launch/: bluetooth_demo.launch
src/BehaviorModule/msg/: behavior_feedback_msg.msg  behavior_msg.msg  idleState.msg  need_msg.msg
src/BehaviorModule/scripts/: talker.py
src/BehaviorModule/src/: BehaviorManager.cpp  behavior_node.cpp
src/PerformModule/: CMakeLists.txt  package.xml
src/PerformModule/include/: BtManager.h  BtRecall.h  common_include.h  serial.h  utils.h
src/PerformModule/msg/: HeadMotion_msg.msg
src/PerformModule/src/: BtManager.cpp  BtRecall.cpp  blueteeth_node.cpp  fabo_teleop_key.cpp
src/arm/: file_need_to_be_modified_when_switching_between_truecontrol_and_gazebo.txt
src/arm/arm_control/: CMakeLists.txt  package.xml
src/arm/arm_control/include/: ArmController.h  ArmsActionManager.h  ArmsControl.h
src/arm/arm_control/json/: arms_actions.json  try.json
src/arm/arm_control/launch/: arm_control.launch
src/arm/arm_control/msg/: Arms.msg
src/arm/arm_control/src/: ArmController.cpp  ArmsActionManager.cpp  ArmsControl.cpp  arm_control.cpp
src/arm/arm_control/srv/: Hand_Control.srv
src/arm/rm_65_demo/: CMakeLists.txt  package.xml
src/arm/rm_65_demo/src/: test_api_movel.cpp
src/arm/rm_65_description/config/: rm_65_flange_urdf.rviz
src/arm/rm_65_description/launch/: display_rm65.launch  display_rm65_flange.launch
src/arm/rm_65_description/urdf/: rm_65_flange.urdf.xacro  rm_65_with_turtle.urdf  rm_65_with_turtle.urdf.xacro
src/arm/rm_65_moveit_config/: .setup_assistant  package.xml
src/arm/rm_65_moveit_config/config/: rm_65.srdf
src/arm/rm_65_moveit_config/launch/: demo.launch  demo_gazebo.launch  demo_realrobot.launch  gazebo.launch  planning_context.launch  rm_65_moveit_controller_manager.launch.xml
src/arm/rm_65_robot/: package.xml
src/arm/rm_bringup/launch/: rm_robot.launch
src/arm/rm_control/src/: rm_control.cpp
src/arm/rm_driver1/: CMakeLists.txt  package.xml
src/arm/rm_driver1/src/: rm_driver1.cpp  rm_robot.h
src/arm/rm_driver2/: CMakeLists.txt  package.xml
src/arm/rm_driver2/src/: rm_driver2.cpp  rm_robot.h
src/arm/rm_msgs/: CMakeLists.txt
src/behavior_module/: CMakeLists.txt  package.xml
src/behavior_module/data/: behaviourData.json  小胖行为定义.csv
src/behavior_module/include/: BehaviorManager.h
src/behavior_module/launch/: bluetooth_demo.launch
src/behavior_module/msg/: behavior_feedback_msg.msg  need_msg.msg
src/behavior_module/scripts/: talker.py
src/behavior_module/src/: BehaviorManager.cpp  behavior_node.cpp
src/emotion_module/: CMakeLists.txt  package.xml
src/emotion_module/image/face/: 1
src/emotion_module/image/test_in1/: 无标题文档 1
src/emotion_module/launch/: test_talkers.launch
src/emotion_module/msg/: attitude_msg.msg  need_satisfy_msg.msg  perception_msg.msg  robot_emotion.msg  robot_status.msg
src/emotion_module/scripts/: Affective_mode_new.py  Data_processing.py  Emotion_engine.py  Image_talker.py  emotion.py  main.py  sentiment.py  visualize_3d.py
src/emotion_module/scripts/csv/: attitude.csv  emotion_param.csv  need_satisfy.csv  perception.csv  personality.csv  test_boring.csv  test_change.csv  test_change2.csv  test_change3.csv  test_eout.csv
src/emotion_module/test/: attitude_talker.py  caculate_test.py  data_flow.csv  need_satisfy_talker.py  perception_talker.py  robot_status.py
src/need_module/: .gitignore  CMakeLists.txt  main.py  package.xml
src/need_module/core/: need_model.cpp  perception_filter.cpp
src/need_module/include/need_model/: common_include.h  emergency.h  inner_need.h  need_satisfied.h  perception_filter.h  prior_need.h  task_need.h  task_paremeter_rw.h
src/need_module/script/: emergency.csv  motivation.csv  test.py
src/perform_module/: CMakeLists.txt  package.xml  蓝牙连接操作
src/perform_module/include/: BtManager.h  BtRecall.h  utils.h
src/perform_module/msg/: WheelMotion_msg.msg
src/perform_module/src/: BtManager.cpp  BtRecall.cpp  blueteeth_node.cpp
src/personality_template/emotion/: attitude.csv  need_satisfy.csv  perception.csv
src/personality_template/need/: Emergency.yaml  TaskNeed.yaml
src/personality_template/need/home/: TaskNeed(idtype为用户名).yaml  TaskNeed(idtype都为family).yaml
src/personality_template/need/hospital/: Emergency.yaml  InnerNeed.yaml  TaskNeed (copy).yaml  TaskNeed.yaml
src/personality_template/need/school/: Emergency.yaml  TaskNeed.yaml
src/personality_template/robot/: robot.yaml
src/social_msg/: CMakeLists.txt  package.xml
src/social_msg/msg/: Arms.msg  attitude_msg.msg  attitude_query.msg  attitude_set.msg  behavior_msg.msg  idleState.msg  need_msg.msg  perception_msg.msg  robot_emotion.msg
